CSS Fix for background on firefox

--- a/css.css
+++ b/css.css
@@ -11,6 +11,8 @@ body{
 	margin:0;
 	padding:0;
 	font-family:sans-serif;
+	background-size: cover;
+	height:100%;
 }
 footer{
 	position: absolute;
